--- a/source/_posts/从0到1搭建微服务项目-核心模块.md
+++ b/source/_posts/从0到1搭建微服务项目-核心模块.md
@@ -7,7 +7,7 @@ tags: [微服务]
 
 1，微服务对应的springboot版本很重要，可以去官网查看对应版本知道你们懒，所以帮你们截图下来了。
 
-![image-20220901175350918](C:\Users\dell\AppData\Roaming\Typora\typora-user-images\image-20220901175350918.png)
+![image-20220901175350918](http://114.55.238.234:9000/images\image-20220901175350918.png)
 
   **最新版本有很多坑**，但是我们
 
